# ai_service

./: .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt
cfg/: config.json  weights.json
src/: main.cpp
src/business/: recognize_digit.hpp
src/controllers/: recognize.hpp
src/dto/: recognize_request.hpp
src/neural/: neural.hpp
